--- a/about.html
+++ b/about.html
@@ -34,26 +34,25 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="menu-item"><a href="index.html">home</a></li>
             <li class="menu-item actief"><a href="about.html">over ons</a></li>
-            <li class="menu-item"><a href="cursus.html">cursussen</a></li>
+            <li class="menu-item"><a href="cursus.html">trainingen</a></li>
             <li class="menu-item"><a href="contact.html">contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class='fullscreenDiv'>
-      <div class="center">
+    <div class="row" id="header-div">
+      <div class="col-12-12 center">
         <div id="header-text">
-          <p id="header-overons">
+          <p id="text-overons">
             over ons
           </p>
           <p id="slogan-overons">
-            robotacademie
+            ROBOTACADEMIE
           </p>
-          <h1 id="title-overons">smart robots <span class="accent-color">-</span> smarter people<span class="accent-color blink_me">_</span></h1>
-
+          <h1 id="title-overons"> smart robots <span class="accent-color">-</span> smarter people<span class="accent-color blink_me">_</span></h1>
         </div>
       </div>
-    </div>
+    </div>​
   </header>
 
   <div class="container-fluid">
@@ -64,9 +63,8 @@
     <div class="col-sm-6">
       <h2>Over ons</h2>
       <h3>Josje Verbeeten </h3>
-      <p>Mijn naam is Josje Verbeeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari op het NOS-journaal over het uitzendbureau van robots en over het idee
-        om 30.000 mensen de gaan trainen. Hierdoor raakte ik erg enthousiast en bedacht me: ‘Dit ga ik doen!’ Zelf heb ik als achtergrond docent, maar ook adviseur en ik heb gewerkt binnen de overheid en het bedrijfsleven. Op eigen initiatief ben ik op
-        de Robotacademie afgestapt en heb nu als functie directeur binnen het bedrijf.
+      <p>
+        Mijn naam is Josje Verbeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari in het NOS-journaal over het uitzendbureau van robots en over het idee om 30.000 mensen de gaan trainen. Hierdoor raakte ik erg enthousiast en bedacht me: ‘Dit ga ik doen!’ Zelf heb ik als achtergrond docent, maar ook adviseur en ik heb gewerkt binnen de overheid en het bedrijfsleven. Op eigen initiatief ben ik op de Robotacademie afgestapt en heb nu als functie directeur binnen het bedrijf.
       </p>
 
     </div>
@@ -75,15 +73,14 @@
   <div class="row"  id="samenwerking">
       <div class="col-sm-6">
         <h2>De samenwerking tussen mens en robot</h2>
-        <p> Technologie is op dit moment steeds verder aan het ontwikkelen. We kunnen steeds meer met techniek en daarom zijn er dus ook steeds meer mogelijkheden. Dit betekent ook dat techniek steeds meer als hulpmiddel zal dienen, en dan met name als even
-          hulpmiddel voor de mens. Robots zullen mensen gaan ontlasten.
+        <p>
+          Technologie is op dit moment steeds verder aan het ontwikkelen. We kunnen steeds meer met techniek en daarom zijn er dus ook steeds meer mogelijkheden. Dit betekent ook dat techniek steeds meer als hulpmiddel zal dienen, en dan met name als even hulpmiddel voor de mens. Robots zullen mensen gaan ontlasten.
         </p>
         <h4 id="quote">
-          "We zeggen dan ook altijd; robots kunnen dirty, dull en dangerous werk doen, dus het saaie en gevaarlijke werk"<br /><span class="quotename">- Josje Verbeeten</span>
+          "We zeggen dan ook altijd; robots kunnen dirty, dull en dangerous werk doen, dus het saaie en gevaarlijke werk."<br /><span class="quotename">- Josje Verbeeten</span>
         </h4>
         <p>
-          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training kost ongeveer 300 euro, deze training bestaat uit 2 dagen theorie, praktijk
-          en online training. Bij een training laten wij uw werknemers kennismaken met hun nieuwe digitale collega’s om uw werknemers gerust te stellen en te motiveren. De training zal plaats vinden bij onze werkplaats gelegen in Best of bij uw bedrijf.
+          De robots zullen de mens dus ondersteunen en het is dus van belang dat mens en robot optimaal leren samenwerken. Dan haal je en het beste uit jezelf en uit het bedrijf. Hierdoor zal een ieder meer kunnen bereiken.
         </p>
       </div>
       <div class="col-sm-6">
@@ -97,8 +94,8 @@
     </div>
     <div class="col-sm-6">
       <h2>De Robotacademie over 5 jaar</h2>
-      <p>Ons toekomstdoel is om over 5 jaar duidenden mensen te trainen bij de Robotacademie. Deze mensen werken als operator of als stapellaar/inpakker om de robots aan te sturen, te ondersteunen en op kwaliteit te controleren. Zij werken bij even bedrijf
-        die in de toekomst robots zal gaan inzetten om op deze manier innovatie te stimuleren. Deze mensen zullen bij de Robotacademie gaan leren over de samenwerking tussen mens en robot, en zo dus ook een robot aan leren sturen.
+      <p>
+        Ons toekomstdoel is om over 5 jaar duidenden mensen te trainen bij de Robotacademie. Deze mensen werken als operator of als stapellaar/inpakker om de robots aan te sturen, te ondersteunen en op kwaliteit te controleren. Zij werken bij even bedrijf die in de toekomst robots zal gaan inzetten om op deze manier innovatie te stimuleren. Deze mensen zullen bij de Robotacademie gaan leren over de samenwerking tussen mens en robot, en zo dus ook een robot aan leren sturen.
       </p>
 
     </div>
@@ -107,13 +104,11 @@
   <div class="row">
     <div class="col-sm-6" id="cursussen">
       <h2>Band met het onderwijs</h2>
-      <p> Door even nauwe samenwerking met het onderwijs zullen wij erg innovatief werken. We hebben onder andere contact met de Technische Universiteit Eindhoven en hogeschool Avans. We hebben hierdoor onder andere al wat stagaires en medewerkers van de
-        universiteit rondlopen.
-
+      <p>
+        Door even nauwe samenwerking met het onderwijs zullen wij erg innovatief werken. We hebben onder andere contact met de Technische Universiteit Eindhoven en hogeschool Avans. We hebben hierdoor onder andere al wat stagaires en medewerkers van de universiteit rondlopen.
       </p>
-      <p>Ook hebben studenten van de opleiding Communication Multimedia Design aan de Avans te ‘s-Hertogenbosch deze site ontworpen en gecodeerd.
-
-
+      <p>
+        Ook hebben studenten van de opleiding Communication Multimedia Design aan de Avans te ‘s-Hertogenbosch deze site ontworpen en gecodeerd.
       </p>
 
     </div>
