--- a/cursus.html
+++ b/cursus.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="menu-item"><a href="index.html">home</a></li>
             <li class="menu-item"><a href="about.html">over ons</a></li>
-            <li class="menu-item actief"><a href="cursus.html">cursussen</a></li>
+            <li class="menu-item actief"><a href="cursus.html">trainingen</a></li>
             <li class="menu-item"><a href="contact.html">contact</a></li>
           </ul>
         </div>
@@ -46,7 +46,7 @@
         <div id="header-text">
           <p id="slogan">
           </p>
-          <h1 id="title">cursussen<span class="accent-color blink_me">_</span></h1>
+          <h1 id="title">Trainingen<span class="accent-color blink_me">_</span></h1>
         </div>
       </div>
     </div>
@@ -55,10 +55,10 @@
   <div class="container">
     <div class="row" id="cursussen-text">
       <div class="col-sm-12" id="cursussen-introtext">
-        <p> De trainingen zijn allen erg praktijkgericht. Er komt eerst een stuk theorie te pas en daarna zal het praktijkgedeelte beginnen. Hierbij oefen en speel je met de Robots. Hierdoor zal je zien hoe het is om met de display te werken en de robot aan
-          te sturen. En dus ook zien wat de robot wel en niet kan. Tot slot is er ook nog een stukje onlinetraining. We starten nu met dit soort basistrainingen maar zijn van plan dit uit te bouwen. Voor de bedrijven die hier al eerder zijn geweest willen
-          wij namelijk een verdiepende training op gaan zetten.
-
+        <p>
+          De trainingen zijn zeer praktijkgericht. We beginnen met een stukje theorie en daarna zal het praktijkgedeelte beginnen. Hierbij oefen en speel je met de robots. Hierdoor zal je zien hoe het is om met de display te werken en de robot aan te sturen. En
+          dus ook zien wat de wel en niet kan. Als ondersteuning bieden wij ook nog een onlinetraining aan. We starten nu met dit soort basistrainingen maar gaan dit uitbouwen. Voor de bedrijven die hier al eerder zijn geweest willen wij namelijk een
+          verdiepende training op gaan zetten.
         </p>
       </div>
     </div>
