--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="menu-item actief"><a href="index.html">home</a></li>
             <li class="menu-item "><a href="about.html">over ons</a></li>
-            <li class="menu-item"><a href="cursus.html">cursussen</a></li>
+            <li class="menu-item"><a href="cursus.html">trainingen</a></li>
             <li class="menu-item"><a href="contact.html">contact</a></li>
           </ul>
         </div>
@@ -49,8 +49,8 @@
             Houd je werk
           </p>
           <h1 id="title">UP<span class="accent-color">-</span>TO<span class="accent-color">-</span>DATE<span class="accent-color blink_me">_</span></h1>
-          <p id="intro-text" class="center"> Robots nemen steeds meer repeterende, vaak zware of saaie werkzaamheden over. Dit zorgt ervoor dat werknemers nieuwe mogelijkheden krijgen, waaronder het aansturen van de robots. Robotacademie helpt bedrijven zich voor te bereiden op de toekomst
-            doormiddel van 2 dagen theorie, praktijk en online training over het begeleiden en aansturen van robots.
+          <p id="intro-text" class="center"> Robots nemen steeds meer repeterende, vaak zware of saaie werkzaamheden over. Dit zorgt ervoor dat werknemers nieuwe mogelijkheden krijgen, waaronder het aansturen van de robots. De Robotacademie helpt bedrijven zich voor te bereiden op de toekomst door middel van 2 dagen theorie, praktijk en een online training over het begeleiden en aansturen van robots.
+
           </p>
           <a href="contact.html"><button type="button" class="btn btn-primary btn-header">Neem Contact Op</button></a>
           <a href="cursus.html"><button type="button" class="btn btn-secondary btn-header">Onze Cursussen</button></a>
@@ -84,8 +84,7 @@
           <img src="img/icons/002-people-1-01.png" class="img-responsive driedeling-icon" alt="icoon werkgever" />
           <h3> Werkgever </h3>
           <p>
-            Door middel van deze training zal u om leren gaan met uw nieuwe digitale collega, de robot. De training zal zorgen voor een betere positie op de arbeidsmarkt. U zal door de training beter werk kunnen uitvoeren, de robots zullen namelijk het dull,dirty
-            & dangerous work verrichten. Graag leren samenwerken met robots?
+            Graag uw bedrijf up-to-date houden in deze tijd vol veranderingen? Daarvoor heeft robotacademie de juiste trainingen. Uw personeel deel laten nemen aan een training zal uw bedrijf versnelde innovatie brengen en uw medewerkers tevreden houden. De trainingen bij de Robotacademie zorgen er dan ook voor dat uw bedrijf op rolletjes zal gaan lopen. Kies robotacademie.
           </p>
           <a href="werkgever.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
         </div>
@@ -96,8 +95,7 @@
           <img src="img/icons/003-brainstorming-01.png" class="img-responsive driedeling-icon" alt="icoon cursist" />
           <h3> Medewerker </h3>
           <p>
-            Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik zal 24 uur per dag, beschikbaar zijn
-            om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwamen operator.
+            Door middel van deze training zal u om leren gaan met uw nieuwe digitale collega, de robot. De training zal zorgen voor een betere positie op de arbeidsmarkt. U zal door de training beter werk kunnen uitvoeren, de robots zullen namelijk het dull, dirty & dangerous work verrichten. Graag leren samenwerken met robots?
           </p>
           <a href="medewerker.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
         </div>
@@ -108,8 +106,7 @@
           <img src="img/icons/004-settings-01.png" class="img-responsive driedeling-icon" alt="icoon robot" />
           <h3> Robot </h3>
           <p>
-            Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb vergeet ik dit namelijk nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik hoef zelfs niet naar het toilet!
-            Ik zal 24 uur per dag, 7 dagen in de week beschikbaar zijn om aan uw zijde te werken. Ik word natuurlijk graag aangestuurd door even bekwamen operator.
+            Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb, vergeet ik dit nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik zal 24 uur per dag beschikbaar zijn om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwame operator.
           </p>
           <a href="robot.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
         </div>
@@ -118,19 +115,16 @@
 
     <div class="row">
       <div class="col-sm-6" id="cursussen">
-        <h2>Cursussen</h2>
-        <p> Uw werknemers kunnen trainingen volgen aan de Robotacademie. Door middel van deze trainingen zal in de toekomst de samenwerking tussen mens en robot in uw bedrijf up-to date blijven. Ook zullen uw werknemers langer in goede gezondheid kunnen doorwerken.
-          Hierdoor zal uw bedrijf de mogelijkheid krijgen in de toekomst productiever te kunnen werken.
-        </p>
-
+        <h2>Trainingen</h2>
         <p>
-
-          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training bestaat uit 2 dagen theorie, praktijk en online training. Bij een training
-          laten wij uw werknemers kennismaken met hun nieuwe digitale collega’s om uw werknemers gerust te stellen en te motiveren. De training zal plaats vinden bij onze werkplaats gelegen in Best of bij uw bedrijf.
+          Uw werknemers kunnen trainingen volgen aan de Robotacademie. Door middel van deze trainingen zal in de toekomst de samenwerking tussen mens en robot in uw bedrijf up-to date blijven. Ook zullen uw werknemers langer in goede gezondheid kunnen doorwerken. Hierdoor krijgt uw bedrijf de mogelijkheid in de toekomst productiever te kunnen werken.
+        </p>
+        <p>
+          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training kost ongeveer 300 euro, deze training bestaat uit 2 dagen theorie, praktijk en online training. Bij een training laten wij uw werknemers kennismaken met hun nieuwe digitale collega’s om uw werknemers gerust te stellen en te motiveren. De training zal plaats vinden bij onze werkplaats gelegen in Best of bij uw bedrijf.
         </p>
 
         <h4 id="quote">
-          “Als werkgever laat je sociaalwerknemerschap zien, je laat zien dan je de verantwoordelijkheid neemt om je mensen te laten groeien, leren en om je mensen toekomstproof te maken.”<br /><span class="quotename">- Josje Verbeeten</span>
+          “Als werkgever laat je sociaal werknemerschap zien, je laat zien dat je de verantwoordelijkheid neemt om je mensen te laten groeien, leren en om je mensen toekomstproof te maken.”<br /><span class="quotename">- Josje Verbeeten</span>
         </h4>
         <a href="cursus.html"><button type="button" class="btn btn-primary btn-readmore">Lees meer</button></a>
       </div>
