--- a/robot.html
+++ b/robot.html
@@ -44,7 +44,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="menu-item"><a href="index.html">home</a></li>
             <li class="menu-item"><a href="about.html">over ons</a></li>
-            <li class="menu-item"><a href="cursus.html">cursussen</a></li>
+            <li class="menu-item"><a href="cursus.html">trainingen</a></li>
             <li class="menu-item"><a href="contact.html">contact</a></li>
           </ul>
         </div>
