nieuwe intro text

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
       </div>
       <div class="col-sm-8" id="over-ons-introtext">
         <h4>Be a part of the future</h4>
-        <p>Robots nemen steeds meer repeterende, vaak zware of saaie werkzaamheden over. Dit zorgt ervoor dat werknemers nieuwe mogelijkheden krijgen, waaronder het aansturen van de robots. De Robotacademie helpt bedrijven zich voor te bereiden op de toekomst
-          door middel van 2 dagen theorie, praktijk en een online training over het begeleiden en aansturen van robots.
+        <p>De Robotacademie is het dochterbedrijf van Smart Robotics, gelegen te Best. Smart Robotics is het uitzendbureau voor robots. Hier kunnen de robots ingehuurd worden om uw bedrijf te helpen met de innovatie automatisering. De Robotacademie verzorgt trainingen waarbij medewerkers samen leren werken met robots. Deze trainingen worden gebaseerd op de robotinstallatie bij uw bedrijf en zullen de samenwerking tussen mens en robot stimuleren en verbeteren.
           <p id="vraag-overons"> Maar, wat betekent de Robot dan voor mij?</p>
         </p>
       </div>
