--- a/medewerker.html
+++ b/medewerker.html
@@ -19,7 +19,7 @@
 
 <style>
 header{
-  background-image: url(img/banners/banner_5.jpg);
+  background-image: url(img/banners/banner3.jpg);
   background-size: cover;
   background-position: center;
   height: 550px;
