--- a/robot.html
+++ b/robot.html
@@ -19,7 +19,7 @@
 
   <style>
     header {
-      background-image: url(img/banners/banner_6.jpg);
+      background-image: url(img/banners/banner8.jpg);
       background-size: cover;
       background-position: center;
       height: 550px;
