--- a/werkgever.html
+++ b/werkgever.html
@@ -19,7 +19,7 @@
 
 <style>
 header{
-  background-image: url(img/banners/banner_3.jpg);
+  background-image: url(img/banners/banner9.jpg);
   background-size: cover;
   background-position: center;
   height: 550px;
