he-le-maal klaar mee

--- a/about.html
+++ b/about.html
@@ -40,19 +40,17 @@
         </div>
       </div>
     </nav>
-    <div class="row" id="header-div">
-      <div class="col-12-12 center">
+    <div class='fullscreenDiv'>
+      <div class="center">
         <div id="header-text">
-          <p id="text-overons">
-            over ons
+          <p id="slogan">
           </p>
-          <p id="slogan-overons">
-            ROBOTACADEMIE
-          </p>
-          <h1 id="title-overons"> smart robots <span class="accent-color">-</span> smarter people<span class="accent-color blink_me">_</span></h1>
+          <h1 class="title">Over Ons<span class="accent-color blink_me">_</span></h1>
         </div>
+
       </div>
-    </div>​
+    </div>
+
   </header>
 
   <div class="container-fluid">
