--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <p id="slogan">
             Houd je werk
           </p>
-          <h1 id="title">UP<span class="accent-color">-</span>TO<span class="accent-color">-</span>DATE<span class="accent-color blink_me">_</span></h1>
+          <h1 class="title">UP<span class="accent-color">-</span>TO<span class="accent-color">-</span>DATE<span class="accent-color blink_me">_</span></h1>
           <p id="intro-text" class="center"> Robots nemen steeds meer repeterende, vaak zware of saaie werkzaamheden over. Dit zorgt ervoor dat werknemers nieuwe mogelijkheden krijgen, waaronder het aansturen van de robots. De Robotacademie helpt bedrijven zich voor te bereiden op de toekomst door middel van 2 dagen theorie, praktijk en een online training over het begeleiden en aansturen van robots.
 
           </p>
