--- a/robot.html
+++ b/robot.html
@@ -55,7 +55,7 @@
         <div id="header-text">
           <p id="slogan">
           </p>
-          <h1 id="title">Robot<span class="accent-color blink_me">_</span></h1>
+          <h1 class="title">Robot<span class="accent-color blink_me">_</span></h1>
         </div>
       </div>
     </div>
