--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
         <div id="header-text">
           <p id="slogan">
           </p>
-          <h1 id="title">Contact<span class="accent-color blink_me">_</span></h1>
+          <h1 class="title">Contact<span class="accent-color blink_me">_</span></h1>
 
         </div>
 
