--- a/cursus.html
+++ b/cursus.html
@@ -46,7 +46,7 @@
         <div id="header-text">
           <p id="slogan">
           </p>
-          <h1 id="title">Trainingen<span class="accent-color blink_me">_</span></h1>
+          <h1 class="title">Trainingen<span class="accent-color blink_me">_</span></h1>
         </div>
       </div>
     </div>
