--- a/medewerker.html
+++ b/medewerker.html
@@ -55,7 +55,7 @@ header{
         <div id="header-text">
           <p id="slogan">
           </p>
-          <h1 id="title">Medewerker<span class="accent-color blink_me">_</span></h1>
+          <h1 class="title">Medewerker<span class="accent-color blink_me">_</span></h1>
         </div>
       </div>
     </div>
