nu werken de buttons
denk ik

--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
           <p id="intro-text" class="center"> Robots nemen steeds meer repeterende, vaak zware of saaie werkzaamheden over. Dit zorgt ervoor dat werknemers nieuwe mogelijkheden krijgen, waaronder het aansturen van de robots. De Robotacademie helpt bedrijven zich voor te bereiden op de toekomst door middel van 2 dagen theorie, praktijk en een online training over het begeleiden en aansturen van robots.
 
           </p>
-          <div class="button-headerdiv">
-            <a href="contact.html"><button type="button" class="btn btn-primary btn-header">Neem Contact Op</button></a>
-          </div>
-          <div class="button-headerdiv">
-            <a href="cursus.html"><button type="button" class="btn btn-secondary btn-header">Onze Cursussen</button></a>
+          <div class="buttongroup">
+            <div class="button-headerdiv">
+              <a href="contact.html"><button type="button" class="btn btn-primary btn-header">Neem Contact Op</button></a>
+            </div>
+            <div class="button-headerdiv">
+              <a href="cursus.html"><button type="button" class="btn btn-secondary btn-header">Onze Cursussen</button></a>
+            </div>
           </div>
           </div>
         </div>
