--- a/about.html
+++ b/about.html
@@ -47,13 +47,17 @@
           </p>
           <h1 class="title">Over Ons<span class="accent-color blink_me">_</span></h1>
         </div>
-
       </div>
     </div>
-
   </header>
 
   <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 id="title-about">Smart robots, smarter people!!1</h1>
+        <script>alert("KECH!!")</script>
+      </div>
+    </div>
   <div class="row">
     <div class="col-sm-6">
       <img src="/img/banner_3.jpg" class="img-responsive website-img" alt="foto Josje Verbeten">
