--- a/about.html
+++ b/about.html
@@ -54,8 +54,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-12">
-        <h1 id="title-about">Smart robots, smarter people!!1</h1>
-        <script>alert("KECH!!")</script>
+        <h1 id="title-about">Smart robots, smarter people</h1>
       </div>
     </div>
   <div class="row">
