--- a/cursus.html
+++ b/cursus.html
@@ -77,20 +77,18 @@
         <div class="col-sm-4" id="kolommen">
           <h3>
         Training Robobuddy
-
-
       </h3>
           <h3>(1 dagdeel)</h3>
           <p id="text-kolommen">
             <p id="text-kolommen">
-
               Het leerdoel is kennismaken met slimme robots voor de productie-omgeving. Om zo te komen tot een realistisch en zeer waarschijnlijk positief beeld over het werken met robots.
             </p>
+            <h5>Voor productiemedewerkers</h5>
             <p id="text-kolommen">
 
 
 
-              Voor productiemedewerkers Na afloop weet uw medewerker wat robots zijn, wat ze kunnen en wat ze niet kunnen. Hoe ze eenvoudig te bedienen zijn. Hoe ze er veilig mee kunnen werken. Uw medewerker heeft een beeld van wat dit gaat betekenen voor zijn/ haar
+               Na afloop weet uw medewerker wat robots zijn, wat ze kunnen en wat ze niet kunnen. Hoe ze eenvoudig te bedienen zijn. Hoe ze er veilig mee kunnen werken. Uw medewerker heeft een beeld van wat dit gaat betekenen voor zijn/ haar
               huidige taken. Beseft dat samenwerken met de robot eenvoudig mogelijk én leuk kan zijn. Kortom; een realistische en daardoor constructieve houding. Tijdens de training wordt er geoefend met het display van de robot: aanzetten, in werking
               brengen, na fout herstarten.
             </p>
@@ -112,7 +110,8 @@
 
           <p id="text-kolommen">
 
-            <p id="text-kolommen">Het leerdoel is optimaal samenwerken met de robot bij het stapelen en inpakken. Voor een duurzaam en zo efficiënt mogelijk proces. Voor productiemedewerkers</p>
+            <p id="text-kolommen">Het leerdoel is optimaal samenwerken met de robot bij het stapelen en inpakken. Voor een duurzaam en zo efficiënt mogelijk proces. </p>
+          <h5>Voor productiemedewerkers</h5>
             <p id="text-kolommen">
               Deze training heeft ook de inhoud van Robobuddy. Extra is dat uw medewerker intensief heeft geoefend met het bedienen van de robot, bij het stapelen of het inpakken van een product in dozen. Met het aanzetten, in werking brengen en herstarten na een fout.
               De medewerker kan een geïnstalleerde robot bijstellen voor een optimaal functionerend productieproces. Hij/zij kan de lasersensor afstellen, de grijper wisselen, de oppakpositie van de robot bijstellen, de snelheid van de robot aanpassen,
@@ -131,8 +130,9 @@
           <h3>(4 dagdelen)</h3>
           <p id="text-kolommen">
 
-            <p id="text-kolommen">Het leerdoel is optimaal samenwerken en het kunnen invoeren van nieuwe patronen voor de robot. Voor een duurzaam en zo efficiënt mogelijk proces. Voor technische dienst / operationeel management Deze training heeft ook de inhoud van Robobuddy
+            <p id="text-kolommen">Het leerdoel is optimaal samenwerken en het kunnen invoeren van nieuwe patronen voor de robot. Voor een duurzaam en zo efficiënt mogelijk proces. Deze training heeft ook de inhoud van Robobuddy
               en Robotoperator. Extra is dat uw operationeel manager, uw ervaren operator of medewerker Technische Dienst bekend is met de meest voorkomende storingen.</p>
+              <h5> Voor technische dienst / operationeel management </h5>
             <p id="text-kolommen">Hij/zij kan zijn collega’s leren veilig samen te werken met de robot . Hij weet hoe hij/zij een nieuw stapelpatroon kan inleren. Uw medewerker kan een geïnstalleerde robot bijstellen voor een optimaal functionerend productieproces. Hij/zij
               kan een eenvoudig cobotprogramma in flowchart lezen en het stapsgewijze gedrag hiervan uitleggen. De medewerker kan een lasersensor afstellen zodat deze een product foutloos detecteert. De medewerker kan een grijper wisselen en de oppakpositie
               van de cobot zo bijstellen dat de grijper het product goed oppakt. De medewerker kan de snelheid van de cobot aanpassen om de kans op het loslaten van het product tijdens verplaatsing te minimaliseren. De medewerker kan de plaatsbeweging
