--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a href="contact.html"><button type="button" class="btn btn-primary btn-header">Neem Contact Op</button></a>
             </div>
             <div class="button-headerdiv">
-              <a href="cursus.html"><button type="button" class="btn btn-secondary btn-header">Onze Cursussen</button></a>
+              <a href="cursus.html"><button type="button" class="btn btn-secondary btn-header">Onze Trainingen</button></a>
             </div>
           </div>
           </div>
