--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       <h2>Over ons</h2>
       <h3>Josje Verbeeten </h3>
       <p>
-        Mijn naam is Josje Verbeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari in het NOS-journaal over het uitzendbureau van robots en over het idee om 30.000 mensen de gaan trainen. Hierdoor raakte ik erg enthousiast en bedacht me: ‘Dit ga ik doen!’ Zelf heb ik als achtergrond docent, maar ook adviseur en ik heb gewerkt binnen de overheid en het bedrijfsleven. Op eigen initiatief ben ik op de Robotacademie afgestapt en heb nu als functie directeur binnen het bedrijf.
+        Mijn naam is Josje Verbeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari in het NOS-journaal over het uitzendbureau van robots en over het idee om 30.000 mensen de gaan trainen. Hierdoor raakte ik erg enthousiast en bedacht me: ‘Dit ga ik doen!’ Zelf heb ik naast een achtergrond als docent, ook een achtergrond als adviseur. Ik heb gewerkt binnen de overheid en het bedrijfsleven.  Op eigen initiatief ben ik op de Robotacademie afgestapt en heb nu als functie directrice van het bedrijf.
       </p>
 
     </div>
@@ -106,7 +106,7 @@
     <div class="col-sm-6" id="cursussen">
       <h2>Band met het onderwijs</h2>
       <p>
-        Door even nauwe samenwerking met het onderwijs zullen wij erg innovatief werken. We hebben onder andere contact met de Technische Universiteit Eindhoven en hogeschool Avans. We hebben hierdoor onder andere al wat stagaires en medewerkers van de universiteit rondlopen.
+        Door een nauwe samenwerking met het onderwijs zullen wij erg innovatief werken. We hebben onder andere contact met de Technische Universiteit Eindhoven en hogeschool Avans. We hebben hierdoor onder andere al wat stagaires en medewerkers van de universiteit rondlopen.
       </p>
       <p>
         Ook hebben studenten van de opleiding Communication Multimedia Design aan de Avans te ‘s-Hertogenbosch deze site ontworpen en gecodeerd.
