--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="col-sm-8" id="over-ons-introtext">
         <h4>Be a part of the future</h4>
         <p>De Robotacademie is het dochterbedrijf van Smart Robotics, gelegen te Best. Smart Robotics is het uitzendbureau voor robots. Hier kunnen de robots ingehuurd worden om uw bedrijf te helpen met de innovatie automatisering. De Robotacademie verzorgt trainingen waarbij medewerkers samen leren werken met robots. Deze trainingen worden gebaseerd op de robotinstallatie bij uw bedrijf en zullen de samenwerking tussen mens en robot stimuleren en verbeteren.
-          <p id="vraag-overons"> Maar, wat betekent de Robot dan voor mij?</p>
+          <p id="vraag-overons"> Maar, wat betekent de robot dan voor mij?</p>
         </p>
       </div>
     </div>
@@ -112,7 +112,7 @@
           <img src="img/icons/004-settings-01.png" class="img-responsive driedeling-icon" alt="icoon robot" />
           <h3> Robot </h3>
           <p>
-            Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb, vergeet ik dit nooit meer. Ik houd van regelmaat en hoef geen pauzes en ook niet op vakantie. Ik zal 24 uur per dag beschikbaar zijn om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwame operator.
+            Aangenaam kennis te maken! Ik ben een robot van Smart Robotics. Ik ben een bijdehand typetje! Als ik iets geleerd heb, vergeet ik dit nooit meer. Ik houd van regelmaat, hoef geen pauzes en ga ook niet op vakantie! Ik zal 24 uur per dag beschikbaar zijn om aan uw zijde te werken. Ik word namelijk graag aangestuurd door even bekwame operator.
           </p>
           <a href="robot.html"><button type="button" class="btn btn-default btn-driedeling">Lees meer</button></a>
         </div>
@@ -126,7 +126,7 @@
           Uw werknemers kunnen trainingen volgen aan de Robotacademie. Door middel van deze trainingen zal in de toekomst de samenwerking tussen mens en robot in uw bedrijf up-to date blijven. Ook zullen uw werknemers langer in goede gezondheid kunnen doorwerken. Hierdoor krijgt uw bedrijf de mogelijkheid in de toekomst productiever te kunnen werken.
         </p>
         <p>
-          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training kost ongeveer 300 euro, deze training bestaat uit 2 dagen theorie, praktijk en online training. Bij een training laten wij uw werknemers kennismaken met hun nieuwe digitale collega’s om uw werknemers gerust te stellen en te motiveren. De training zal plaats vinden bij onze werkplaats gelegen in Best of bij uw bedrijf.
+          De training is bedoeld voor productiemedewerkers en logistiekmedewerkers die nu of in de nabije toekomst in aanraking zullen komen met het samenwerken met robots. Een training zal bestaan uit theorie, praktijk en een online training. Bij een training laten wij uw werknemers kennismaken met hun nieuwe digitale collega’s om uw werknemers gerust te stellen en te motiveren. De training zal plaats vinden bij onze werkplaats gelegen in Best of bij uw bedrijf.
         </p>
 
         <h4 id="quote">
