josje verbeeten veranderd

--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
     </div>
   <div class="row">
     <div class="col-sm-6">
-      <img src="/img/banner_3.jpg" class="img-responsive website-img" alt="foto Josje Verbeten">
+      <img src="/img/banner_3.jpg" class="img-responsive website-img" alt="foto Josje Verbeeten">
     </div>
     <div class="col-sm-6">
       <h2>Over ons</h2>
       <h3>Josje Verbeeten </h3>
       <p>
-        Mijn naam is Josje Verbeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari in het NOS-journaal over het uitzendbureau van robots en over het idee om 30.000 mensen de gaan trainen. Hierdoor raakte ik erg enthousiast en bedacht me: ‘Dit ga ik doen!’ Zelf heb ik naast een achtergrond als docent, ook een achtergrond als adviseur. Ik heb gewerkt binnen de overheid en het bedrijfsleven.  Op eigen initiatief ben ik op de Robotacademie afgestapt en heb nu als functie directrice van het bedrijf.
+        Mijn naam is Josje Verbeeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari in het NOS-journaal over het uitzendbureau van robots en over het idee om 30.000 mensen de gaan trainen. Hierdoor raakte ik erg enthousiast en bedacht me: ‘Dit ga ik doen!’ Zelf heb ik naast een achtergrond als docent, ook een achtergrond als adviseur. Ik heb gewerkt binnen de overheid en het bedrijfsleven.  Op eigen initiatief ben ik op de Robotacademie afgestapt en heb nu als functie directrice van het bedrijf.
       </p>
 
     </div>
