--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+  <script>
+    alert("Deze website is een schoolopdracht.");
+  </script>
   <header>
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
