--- a/about.html
+++ b/about.html
@@ -63,9 +63,9 @@
     </div>
     <div class="col-sm-6">
       <h2>Over ons</h2>
-      <h3>Josje Verbeeten </h3>
+      <h3>Lorem Ipsum</h3>
       <p>
-        Mijn naam is Josje Verbeeten, ik ben sinds 1 mei 2017 de Robotacademie aan het opzetten. Robotacademie is een initiatief van Smart Robotics. Ik hoorde Mark Menting in februari in het NOS-journaal over het uitzendbureau van robots en over het idee om 30.000 mensen de gaan trainen. Hierdoor raakte ik erg enthousiast en bedacht me: ‘Dit ga ik doen!’ Zelf heb ik naast een achtergrond als docent, ook een achtergrond als adviseur. Ik heb gewerkt binnen de overheid en het bedrijfsleven.  Op eigen initiatief ben ik op de Robotacademie afgestapt en heb nu als functie directrice van het bedrijf.
+        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to Robot.
       </p>
 
     </div>
